# gcp-elt-pipeline

./: .gitignore  pyproject.toml
.github/workflows/: ci-infra-bootstrap.yml  ci-infra-pipeline.yml  gh-actions-example.yml  infra.yml
data/: dummy_data.csv
infra/bootstrap/: backend.tf  main.tf  variables.tf
infra/modules/artifactregistry/: variables.tf
infra/modules/blobstorage/: main.tf
infra/modules/cloudrun/: main.tf
infra/modules/cloudsql/: main.tf  variables.tf
infra/pipeline/: backend.tf  main.tf  variables.tf
infra/pipeline/modules/artifact_registry/: main.tf  variables.tf
infra/pipeline/modules/artifactregistry/: main.tf
infra/pipeline/modules/blobstorage/: main.tf  variables.tf
infra/pipeline/modules/cloudsql/: main.tf  variables.tf
infra/pipeline/modules/project_services/: main.tf
infra/pipeline/modules/service_account/: main.tf  variables.tf
src/gcp_pipeline/: __init__.py  upload.py  upload_to_bucket.py
src/gcp_pipeline/generate/: __init__.py  data_generator.py
src/gcp_pipeline/ingest/: upload_to_bucket.py  upload_to_cloudsql.py
