[project]
name = "gcp-pipeline"
version = "0.1.0"
description = ""
readme = "README.md"
authors = [
    { name = "Yossi Hartman", email = "" }
]
requires-python = ">=3.13"
dependencies = [
    "google-cloud-storage>=3.9.0",
    "pytest>=9.0.2",
]

[project.scripts]
gcp-pipeline = "gcp_pipeline:main"

[build-system]
requires = ["uv_build>=0.9.7,<0.10.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 120
